--- a/CourtApp.Web/Areas/_ViewImports.cshtml
+++ b/CourtApp.Web/Areas/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using CourtApp.Application.Constants
 @using Microsoft.AspNetCore.Authorization
 @using CourtApp.Web.Areas.LawyerDiary.Models
+@using CourtApp.Web.Areas.LawyerDiary.Models.Title
 @using CourtApp.Web.Areas.Litigation.Models
 @using CourtApp.Web.Areas.Client.Model
 @using CourtApp.Web.Areas.Report.Models
