--- a/CourtApp.Web/Areas/LawyerDiary/Views/Title/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/Title/_ViewAll.cshtml
@@ -5,7 +5,7 @@
             <th>Sno.</th>
             <th>Type</th>
             <th>Case Info</th>
-            <th>Title Detail</th>
+            <th>Total Applicant</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -26,34 +26,33 @@
                     @bt.CaseDetail
                 </td>
                 <td>
-                    @bt.Title
+                    @bt.CaseApplicantDetails.Count()
                 </td>
-                <td>
-                    @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
-                    {
+                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
+                {
                     <td text-right">
-                        <div class="btn-group">
+                        <a onclick="jQueryModalGet('/lawyerdiary/Title/OnCreatOrUpdateTitle?id=@bt.Id','Edit Complete Title')" ><i class="fas fa-pencil-alt"></i></a>
+                        @* <div class="btn-group">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Action
                             </button>
                             <div class="dropdown-menu shadow animated--grow-in">
-                                    @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
-                                    {
-                                    <a onclick="jQueryModalGet('/LawyerDiary/title/OnCreatOrUpdateTitle?id=@bt.Id','Edit Title Detail')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Edit)).Result.Succeeded)
+                                {
+                                    <a onclick="jQueryModalGet('/lawyerdiary/Title/OnCreatOrUpdateTitle?id=@bt.Id','Edit Complete Title')" class="dropdown-item"><i class="fas fa-pencil-alt"></i>  Edit</a>
 
-                                    }
-                                    @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded)
+                                }
+                                @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Delete)).Result.Succeeded)
 
-                                    {
-                                    <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="title" method="post" asp-action="OnTitleDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
+                                {
+                                    <form id="form_delete_@bt.Id" asp-area="LawyerDiary" asp-controller="Title" method="post" asp-action="OnTitleDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
                                         <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
                                     </form>
-                                    }
+                                }
                             </div>
-                        </div>
+                        </div> *@
                     </td>
-                    }
-                </td>
+                }
             </tr>
         }
     </tbody>
