--- a/CourtApp.Web/Areas/Litigation/Views/Drafting/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Drafting/_CreateOrEdit.cshtml
@@ -35,17 +35,28 @@
                     </div>
                     <span asp-validation-for="CaseId" class="text-danger"></span>
                 </div>
-                <label class="col-md-2 col-form-label">@localizer["Template Name"]</label>
+                <label class="col-md-2 col-form-label">@localizer["Drafting Form"]</label>
                 <div class="col-md-4">
                     <div class="input-group" id="Template">
-                        <select asp-for="TemplateId" asp-items="@Model.Templates"
+                        <select asp-for="DraftingFormId" asp-items="@Model.DraftingForms"
                                 class="form-control select2bs4">
                             <option></option>
                         </select>
                     </div>
-                    <span asp-validation-for="TemplateId" class="text-danger"></span>
+                    <span asp-validation-for="DraftingFormId" class="text-danger"></span>
                 </div>
             </div>
+
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["Associate Template"]</label>
+                <div class="col-md-4">
+                    <div class="input-group">
+                        <select asp-for="TemplateId" asp-items="@Model.Templates" class="form-control select2bs4"><option></option></select>
+                    </div>
+                    <span asp-validation-for="TemplateId" class="text-danger"></span>
+                </div>                
+            </div>
+
             <div class="form-group row">
                 <fieldset class="scheduler-border">
                     <legend class="scheduler-border">@localizer["Template Fields"]</legend>
@@ -80,15 +91,23 @@
                 }
             });
 
-            $("#TemplateId").select2({
-                placeholder: "Select a petition template",
+            $("#DraftingFormId").select2({
+                placeholder: "Select a form",
                 theme: "bootstrap4",
                 escapeMarkup: function (m) {
                     return m;
                 }
             });
 
-            $("#TemplateId").on("change", function () {
+            $("#TemplateId").select2({
+                placeholder: "Select a template",
+                theme: "bootstrap4",
+                escapeMarkup: function (m) {
+                    return m;
+                }
+            });
+
+            $("#DraftingFormId").on("change", function () {
                 RenderFormElement();
             });
 
@@ -113,9 +132,9 @@
         });
         function RenderFormElement() {
             var input = {
-                TemplateId: $("#TemplateId").val(),
+                TemplateId: $("#DraftingFormId").val(),
                 ViewModel: {
-                    TemplateId: $("#TemplateId").val(),
+                    TemplateId: $("#DraftingFormId").val(),
                     CaseId: $("#CaseId").val()
                 }
             };
